# torrent-downloader-widget

./: README.md  app.py  install.sh  pyproject.toml  requirements.txt  run.sh  script.sh  test.json
scripts/: api_helper.py  download-torrents.sh  fedora_package_install.sh  install_jackett.sh  run-docker-server.sh  run_torrent_api.sh  scrape_torrent_files.py  stop_docker.sh  transmission_download_torrents.sh
src/carjacker/: api.py  app.py  carjacker.py  find_jackett_torrents.py  header.py  jackett_view.py  main.py  trans_view.py  util.py
src/carjacker/scripts/: run-docker-server.sh
