[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "carjacker"
version = "0.1.0"
description = "TUI for searching and downloading torrents via Jackett / Transmission"
dependencies = [
  "textual",
  "httpx",
  "transmission-rpc",
  "jq",
]
requires-python = ">=3.8"

[project.scripts]
carjacker = "carjacker.main:main"
